translated by hellen

--- a/koha-tmpl/intranet-tmpl/default/de/about.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/about.tmpl
@@ -47,6 +47,7 @@
 					<p>Daniel Holth</p>
 					<p>David Strainchamps</p>
 					<p>Dorian Meid (Deutsche &Uuml;bersetzung)</p>
+					<p>Friedrich zur Hellen (Deutsche &Uuml;bersetzung)</p>
 					<p>doXulting (Matthieu Branlat) OPAC basket</p>
 					<p>Ed Summers (einigen code und Perl-Module wie MARC::Record)</p>
 					<p>Esiee School (Jérome Vizcaino, Michel Lerenard, Pierre Cauchois)</p>
