--- a/koha-tmpl/intranet-tmpl/default/de/catalogue/catalogue-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/catalogue/catalogue-home.tmpl
@@ -26,13 +26,13 @@
 			<option value=""> Any  <!-- TMPL_VAR NAME="classlist" -->
 			</select></p>
 			
-					<p><label class="label100">Search Stil:</label><input type="radio" name="ttype" id=" ttype" value="normal" checked>Normal <input type="radio" name="ttype" value="exact">Exakt</p>
+					<p><label class="label100">Suchart:</label><input type="radio" name="ttype" id=" ttype" value="normal" checked>Normal <input type="radio" name="ttype" value="exact">Exakt</p>
 			</div>
 			
 	<div id="bloc25">
-		<h2 class="catalogue">Strichcode-Suche</h2>
+		<h2 class="catalogue">Barcode-Suche</h2>
 		<p>
-		<label class="label100" for="itemnumber">Strichcode:</label><input type="text"  size="25" id="itemnumber" name="itemnumber"></p>
+		<label class="label100" for="itemnumber">Barcode:</label><input type="text"  size="25" id="itemnumber" name="itemnumber"></p>
 </div>
 
 <div id="bloc25">
