--- a/koha-tmpl/intranet-tmpl/default/de/acqui.simple/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/acqui.simple/addbooks.tmpl
@@ -50,7 +50,7 @@
 	<div id="bloc25">
 		<h2 class="catalogue">Hinweis</h2>
 		<p>Wenn bereits Daten für die ISBN in der Datenbank hinterlegt sind, werden diese angezeigt und k&ouml;nnen bearbeitet werden.<br/>
-			 Wenn Fremddaten für die ISBN abgerufen wurden und sich im Zwischenspeicher befinden, werden diese ebenfalls angezeigt und dienen als Grundlage f&uuml;r einen neuen Datensatz.<br/>
+			 Wenn Fremddaten für die ISBN abgerufen wurden und sich im Fremddatenpool befinden, werden diese ebenfalls angezeigt und dienen als Grundlage f&uuml;r einen neuen Datensatz.<br/>
 			 Anderenfalls wird eine leerer Datensatz angelegt und Sie m&uuml;ssen alle Daten selbst eintragen.</p>
 	</div>
 </div>
