--- a/koha-tmpl/intranet-tmpl/npl/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/acqui/histsearch.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Acquisitions: Order Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Acquisitions: Order Search<!-- TMPL_INCLUDE NAME="doc-head-close-calendar.inc" -->
 <!-- TMPL_INCLUDE name="masthead.inc" -->
 <!-- TMPL_INCLUDE name="intranet-nav.inc" -->
 
@@ -22,7 +22,63 @@
 				<th><input type="text" name="title" value="<!-- TMPL_VAR name="title"-->" /></th>
 				<th><input type="text" name="author" value="<!-- TMPL_VAR name="author" -->" /></th>
 				<th><input type="text" name="name" value="<!-- TMPL_VAR name="name" -->" /></th>
-				<th>&nbsp;</th>
+				<th>					From <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
+					<input type="text" readonly="readonly" size="10" id="from" name="fromplacedon" value="<!-- TMPL_VAR name="from_placed_on" -->">
+					<script language="JavaScript" type="text/javascript">
+						function validate1(date) {
+							var day = date.getDate();
+							var month = date.getMonth() + 1;
+							var year = date.getFullYear();
+							var weekDay = date.getDay();
+							var dayMonth = month + '-' + day;
+							var dateString = year + '-' + month + '-' + day;
+							var dateTo = document.getElementById('to').value.split("-");
+							var limitDate = new Date(dateTo[0], (dateTo[1] - 1), dateTo[2]);
+							if (date > limitDate) {
+								return true;
+							} else {
+								return false;
+							}
+						}
+						Calendar.setup(
+							{
+								inputField : "from",
+								ifFormat : "%Y-%m-%d",
+								button : "openCalendarFrom",
+								disableFunc : validate1,
+								dateStatusFunc : validate1
+							}
+						);
+					</script>
+					To <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" border="0" />
+					<input readonly="readonly" size="10" id="to" name="toplacedon" value="<!-- TMPL_VAR name="to_placed_on" -->" type="text" />
+					<script type="text/javascript">
+						function validate2(date) {
+							var day = date.getDate();
+							var month = date.getMonth() + 1;
+							var year = date.getFullYear();
+							var weekDay = date.getDay();
+							var dayMonth = month + '-' + day;
+							var dateString = year + '-' + month + '-' + day;
+							var dateFrom = document.getElementById('from').value.split("-");
+							var limitDate = new Date(dateFrom[0], (dateFrom[1] - 1), dateFrom[2]);
+							if (limitDate > date) {
+								return true;
+							} else {
+								return false;
+							}
+						}
+
+						Calendar.setup(
+							{
+								inputField : "to",
+								ifFormat : "%Y-%m-%d",
+								button : "openCalendarTo",
+								disableFunc : validate2,
+								dateStatusFunc : validate2
+							}
+						);
+					</script></th>
 				<th>&nbsp;</th>
 				<th>&nbsp;</th>
 				<th>&nbsp;</th>
