--- a/koha-tmpl/intranet-tmpl/npl/en/authorities/authorities.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/authorities/authorities.tmpl
@@ -8,23 +8,36 @@
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/includes/marc-editor.css">
 
 <div class="tabbed">
-	<form method="post" name="f">
-	<h1>Authority number <!-- TMPL_VAR NAME="authid" --></h1>
+	<form method="post" action="authorities.pl" name="f">
+	<!-- TMPL_IF name="authid" -->
+		<h1>Modify authority #<!-- TMPL_VAR NAME="authid" --> (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- TMPL_ELSE -->
+		<h1>Adding authority (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- /TMPL_IF -->
 	<p>
-		<input type="hidden" name="op" value="add">
-		<input type="hidden" name="addfield_field">
-		<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->">
-		<input type="hidden" name="authid" value="<!-- TMPL_VAR NAME="authid" -->">
+		<input type="hidden" name="op" value="add" />
+		<input type="hidden" name="addfield_field" />
+		<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" />
+		<input type="hidden" name="authid" value="<!-- TMPL_VAR NAME="authid" -->" />
 		<!-- TMPL_IF name="authid" -->
-			<input type="button" value="Save" onClick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Save" onClick="Check(this.form)" accesskey="w" class="submit" />
 		<!-- TMPL_ELSE -->
-			<input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="submit" />
 		<!-- /TMPL_IF -->
 <!--		<a href="javascript:PopupZ3950()" class="button authority">z3950 search</a> -->
 	</p>
 </div>
 
-<br><br><br><br><br><br><br><br><br><br><br>
+<!-- TMPL_IF name="duplicateauthid" -->
+	<div class="error">
+		<p>Duplicate suspected with <a href="javascript:openWindow('detail.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->&amp;popup=1', 'Duplicate Authority')"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
+		<p>You must either :</p>
+		<ul>
+			<p><input type="checkbox" value="1" name="confirm_not_duplicate" />confirm it's not a duplicate (and click on <input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority"> again)</p>
+			<p>Go to <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >original authority</a></p>
+		</ul>
+	</div>
+<!-- /TMPL_IF -->
 
 <!-- TMPL_LOOP NAME="0XX" -->
 	<!-- TMPL_IF name="tag" -->
@@ -171,8 +184,8 @@ function PopupZ3950() {
 }
 
 function AddField(field) {
-	document.forms[0].op.value = "addfield";
-	document.forms[0].addfield_field.value=field;
+	document.forms[1].op.value = "addfield";
+	document.forms[1].addfield_field.value=field;
 	document.f.submit();
 }
 </script>
