--- a/koha-tmpl/intranet-tmpl/npl/en/authorities/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/authorities/detail.tmpl
@@ -7,7 +7,7 @@
 <div id="main">
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/includes/marc-editor.css">
 <div class="tabbed">
-	<h1>Authority number : <!-- TMPL_VAR NAME="authid" --></h1>
+	<h1>Authority number : <!-- TMPL_VAR NAME="authid" -->  <!-- TMPL_IF NAME="authtypetext" -->(<!-- TMPL_VAR name="authtypetext" -->)<!-- /TMPL_IF --></h1>
 	<a href="authorities.pl?authid=<!-- TMPL_VAR NAME="authid" -->">
 		<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png">
 	</a>
@@ -41,9 +41,9 @@
 <script language="JavaScript" type="text/javascript">
 
 function confirm_deletion() {
-	var is_confirmed = confirm('Are you sure you want to delete this biblio?');
+	var is_confirmed = confirm('Are you sure you want to delete this authority?');
 	if (is_confirmed) {
-		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
+		window.location="authorities-home.pl?op=delete&amp;authid=<!-- TMPL_VAR NAME="authid" -->";
 	}
 }
 function Dopop(link) {
