Synching with rel_2_2.

--- a/koha-tmpl/intranet-tmpl/npl/en/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/catalogue/MARCdetail.tmpl
@@ -4,13 +4,15 @@
 <!-- TMPL_INCLUDE NAME="intranet-nav.inc" -->
 
 <div id="main">
-<h2>MARC Record for <em><!-- TMPL_VAR NAME="biblio_title" --><!-- TMPL_IF NAME="biblio_subtitle" -->: <!-- TMPL_VAR NAME="biblio_subtitle" --><!-- /TMPL_IF --></em></h2>
+<h2>MARC Record <em><!-- TMPL_VAR NAME="biblionumber" --></em></h2>
 <div class="tabitem"><form action="/cgi-bin/koha/detail.pl" method="get"><input type="hidden" name="bib" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="hidden" value="intra" name="type" /><input type="submit" class="submit" value="Brief Display" /></form><!-- TMPL_IF NAME="norequests" -->&nbsp;<!-- TMPL_ELSE --> <form action="request.pl" method="get"><input type="hidden" name="bib" value="<!-- TMPL_VAR NAME="biblionumber" -->" /> <input type="submit" class="submit" value="Place Reserve" /></form>
 		<!-- /TMPL_IF --><form action="/cgi-bin/koha/detailprint.pl" method="get"><input type="hidden" name="bib" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="submit" class="submit" value="Simple Print View" /></form> <!-- TMPL_IF name="subscriptionid" --><form action="/cgi-bin/koha/bull/subscription-detail.pl" method="get"><input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR NAME="subscriptionid" -->" /><input type="submit" value="Subscription" class="submit" /></form>
-<form action="/cgi-bin/koha/bull/serial-issues.pl" method="get"><input type="hidden" name="subscriptionid" value="!-- TMPL_VAR NAME="subscriptionid" -->" /><input type="submit" value="Serial Issues" class="submit" /></form><!-- /TMPL_IF -->  <form action="/cgi-bin/koha/acqui.simple/addbiblio.pl" method="get"><input type="hidden" name="oldbiblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="submit" class="submit" value="Edit MARC" /></form> <form action="/cgi-bin/koha/acqui.simple/additem.pl" method="get"><input type="hidden" name="bibid" value="<!-- TMPL_VAR name="bibid"-->" /><input type="submit" class="submit" value="Edit Items" /></form> <form action="/cgi-bin/koha/acqui.simple/addbiblio.pl" method="get"><input type="hidden" name="op" value="delete" /><input type="hidden" name="bibid" value="<!-- TMPL_VAR NAME="bibid" -->" /><input type="submit" class="cancel" value="Delete Record" onclick="confirm_deletion(); return false;" /></form></div>
+<form action="/cgi-bin/koha/bull/serial-issues.pl" method="get"><input type="hidden" name="subscriptionid" value="!-- TMPL_VAR NAME="subscriptionid" -->" /><input type="submit" value="Serial Issues" class="submit" /></form><!-- /TMPL_IF -->  </div>
+
+<div id="controls"><form action="/cgi-bin/koha/acqui.simple/addbiblio.pl" method="get"><input type="hidden" name="oldbiblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="submit" class="submit" value="Edit MARC" /></form> <form action="/cgi-bin/koha/acqui.simple/additem.pl" method="get"><input type="hidden" name="bibid" value="<!-- TMPL_VAR name="bibid"-->" /><input type="submit" class="submit" value="Edit Items" /></form> <form name="duplicate"><h4>Duplicate</h4> using <!--TMPL_VAR Name="framework" -->Framework <input type="submit" class="submit" value="Duplicate" onclick="Addbiblio('duplicate'); return false;" /></form> <form action="/cgi-bin/koha/acqui.simple/addbiblio.pl" method="get"><input type="hidden" name="op" value="delete" /><input type="hidden" name="bibid" value="<!-- TMPL_VAR NAME="bibid" -->" /><input type="submit" class="cancel" value="Delete Record" onclick="confirm_deletion(); return false;" /></form></div>
 
 <!-- TMPL_IF NAME="0XX" -->
-<div class="table"><table class="marc">
+<table class="marc">
 	<!-- TMPL_LOOP NAME="0XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -23,11 +25,11 @@
 	</tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="1XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="1XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -40,11 +42,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 	 
 <!-- TMPL_IF NAME="2XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="2XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -57,11 +59,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 	 
 <!-- TMPL_IF NAME="3XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="3XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -74,11 +76,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="4XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="4XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -91,11 +93,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="5XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="5XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -108,11 +110,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="6XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="6XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -125,11 +127,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="7XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="7XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -142,12 +144,12 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 	 <!-- /TMPL_IF -->
 
 	 
 <!-- TMPL_IF NAME="8XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="8XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -160,11 +162,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="9XX" -->
-    <div class="table"><table class="marc">
+    <table class="marc">
 	<!-- TMPL_LOOP NAME="9XX" -->
 	<tr><th colspan="5"><!-- TMPL_VAR NAME="tag" --></th></tr>
 	<!-- TMPL_LOOP NAME="subfield" -->
@@ -177,11 +179,11 @@
        </tr>
 	<!-- /TMPL_LOOP -->
 	<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="item_header_loop -->
-    <div class="table"><table>
+    <table>
 		<tr>
 			<!-- TMPL_LOOP NAME="item_header_loop" --><th><!-- TMPL_VAR NAME="header_value" --></th><!-- /TMPL_LOOP -->
 		</tr>
@@ -190,7 +192,7 @@
 					<!-- TMPL_VAR NAME="item_value" -->
 			</tr>
 		<!-- /TMPL_LOOP -->
-     </table></div>
+     </table>
 <!-- /TMPL_IF -->
 	 </div>
 	<script language="JavaScript" type="text/javascript">
@@ -199,6 +201,14 @@ function confirm_deletion() {
 	if (is_confirmed) {
 		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
 	}
+}
+function Changefwk(FwkList) {
+  var fwk = FwkList.options[FwkList.selectedIndex].value;
+  window.location = "MARCdetail.pl?bib=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
+}
+function Addbiblio(op) {
+  var fwk = document.forms['duplicate'].Frameworks.options[document.forms['duplicate'].Frameworks.selectedIndex].value;
+  window.location = "acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
 }
 </script>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
