--- a/koha-tmpl/intranet-tmpl/npl/en/catalogue/searchresults.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/catalogue/searchresults.tmpl
@@ -7,7 +7,7 @@
 <h3><!-- TMPL_IF NAME="searchdesc" -->
 	You searched for <span class="ex"><!-- TMPL_VAR NAME="searchdesc" --></span>
 <!-- TMPL_ELSE -->
-	You did not specify any seach criteria
+	You did not specify any search criteria
 <!-- /TMPL_IF -->
 </h3>
 <!-- TMPL_IF NAME="numrecords" -->
