--- a/koha-tmpl/intranet-tmpl/npl/en/members/memberentry.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/members/memberentry.tmpl
@@ -45,8 +45,6 @@
 	<!-- /TMPL_IF -->
 	<form action="/cgi-bin/koha/members/memberentry.pl" method="post">
 		<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
-		<input type="hidden" name="joining" value="<!-- TMPL_VAR NAME="dateenrolled" -->">
-		<input type="hidden" name="expiry" value="<!-- TMPL_VAR NAME="expiry" -->">
 		<input type="hidden" name="type" value="borrowers">
 		<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
 		<input type="hidden" name="updtype" value="<!-- TMPL_VAR NAME="updtype" -->">
@@ -60,7 +58,7 @@
 
 	<!-- TMPL_UNLESS name="institution" --><tr><th><label for="title">Salutation:</label></th><td colspan="4"><!-- TMPL_VAR NAME="Mr" -->
 				<select name="title" id="title">
-					<option <!-- TMPL_VAR NAME="title_selected_ " --> value=" ">No Title</option>
+					<option <!-- TMPL_VAR NAME="title_selected_ " --> value="">No Title</option>
 					<option value="Miss" <!-- TMPL_VAR NAME="title_Miss" -->>Miss</option>
 					<option value="Mrs" <!-- TMPL_VAR NAME="title_Mrs" -->>Mrs</option>
 					<option value="Ms" <!-- TMPL_VAR NAME="title_Ms" -->>Ms</option>
@@ -84,23 +82,38 @@
 	<!-- TMPL_UNLESS name="institution" --><tr><th><label for="othernames">Prefered Name:</label></th><td colspan="4"><input type="text" id="othernames" name="othernames" size="20" value="<!-- TMPL_VAR NAME="othernames" -->"></td></tr><!-- /TMPL_UNLESS -->
 
 	<tr><th>Addresses:</th><td colspan="4"><fieldset><legend>Mailing Address</legend><label for="streetaddress"<!-- TMPL_IF NAME="ERROR_address" --> class="focus"<!-- /TMPL_IF -->><a name="address" id="address">Address:</a> </label><input type="text" id="streetaddress" name="streetaddress" size="25" value="<!-- TMPL_VAR NAME="address" -->"<!-- TMPL_IF NAME="ERROR_address" --> class="focus"<!-- /TMPL_IF -->>
-<br><label for="city"<!-- TMPL_IF NAME="ERROR_city" --> class="focus"<!-- /TMPL_IF -->><a name="#city" id="#city">City, State:</a></label> <input type="text" id="city" name="city" size="20" value="<!-- TMPL_VAR NAME="city" -->"<!-- TMPL_IF NAME="ERROR_city" --> class="focus"<!-- /TMPL_IF -->>
+<br><label for="city"<!-- TMPL_IF NAME="ERROR_city" --> class="focus"<!-- /TMPL_IF -->><a name="#city" id="#city">City, State:</a></label> <input type="text" id="city" name="city" size="20" value="<!-- TMPL_VAR NAME="city" -->"<!-- TMPL_IF NAME="ERROR_city" --> class="focus"<!-- /TMPL_IF --> />
 <br><label for="zipcode">Zip Code:</label> <input type="text" id="zipcode" name="zipcode" size="20" maxlength="20" value="<!-- TMPL_VAR NAME="zipcode" -->"></fieldset>
 
 <fieldset><legend>Street Address (if different)</legend>
-<label for="physstreet">Address:</label><input type="text" id="physstreet" name="physstreet" size="25" value="<!-- TMPL_VAR NAME="physstreet" -->">
-<br><label for="streetcity">City, State: </label><input type="text" id="streetcity" name="streetcity" size="20" value="<!-- TMPL_VAR NAME="streetcity" -->">
-<br><label for="homezipcode">Zip Code:</label><input type="text" id="homezipcode" name="homezipcode" size="20" maxlength="20" value="<!-- TMPL_VAR NAME="homezipcode" -->">
+<label for="physstreet">Address:</label><input type="text" id="physstreet" name="physstreet" size="25" value="<!-- TMPL_VAR NAME="physstreet" -->" />
+<br><label for="streetcity">City, State: </label><input type="text" id="streetcity" name="streetcity" size="20" value="<!-- TMPL_VAR NAME="streetcity" -->" />
+<br><label for="homezipcode">Zip Code:</label><input type="text" id="homezipcode" name="homezipcode" size="20" maxlength="20" value="<!-- TMPL_VAR NAME="homezipcode" -->" /> 
 </fieldset>
 </td></tr>
 
-	<tr><th><label for="phone">Phone (Home):</label> </th><td colspan="4"><input type="text" id="phone" name="phone" size="20" value="<!-- TMPL_VAR NAME="phone" -->"></td></tr>
-	<tr><th><label for="phoneday">Phone (Daytime):</label> </th><td colspan="4"><input type="text" id="phoneday" name="phoneday" size="20" value="<!-- TMPL_VAR NAME="phoneday" -->"></td></tr>
-	<tr><th><label for="faxnumber">Fax: </label></th><td colspan="4"><input type="text" id="faxnumber" name="faxnumber" size="20" value="<!-- TMPL_VAR NAME="faxnumber" -->"></td></tr>
-	<tr><th><label for="emailaddress">Email :</label> </th><td colspan="4"><input type="text" id="emailaddress" name="emailaddress" size="40" value="<!-- TMPL_VAR NAME="emailaddress" -->"></td></tr>
+	<tr><th><label for="phone">Phone (Home):</label> </th><td colspan="4"><input type="text" id="phone" name="phone" size="20" value="<!-- TMPL_VAR NAME="phone" -->" /></td></tr>
+	<tr><th><label for="phoneday">Phone (Daytime):</label> </th><td colspan="4"><input type="text" id="phoneday" name="phoneday" size="20" value="<!-- TMPL_VAR NAME="phoneday" -->" /></td></tr>
+	<tr><th><label for="faxnumber">Fax: </label></th><td colspan="4"><input type="text" id="faxnumber" name="faxnumber" size="20" value="<!-- TMPL_VAR NAME="faxnumber" -->" /></td></tr>
+	<tr><th><label for="emailaddress">Email :</label> </th><td colspan="4"><input type="text" id="emailaddress" name="emailaddress" size="40" value="<!-- TMPL_VAR NAME="emailaddress" -->" /></td></tr>
 			</tr>
 	<tr><th><label for="textmessaging">Patron message:</label><p> (appears in OPAC)</p></th><td colspan="4"><textarea id="textmessaging" name="textmessaging" cols="30" rows="3"><!-- TMPL_VAR NAME="textmessaging" --></textarea></td></tr>
 	<tr><th><label for="borrowernotes">Circulation note:</label> <p>(appears in Circulation)</p> </th><td colspan="4"><textarea id="borrowernotes" name="borrowernotes" cols="30" rows="3"><!-- TMPL_VAR NAME="borrowernotes" --></textarea></td></tr>
+
+			<tr>
+				<!-- TMPL_IF NAME="addAction" -->
+					<th>Joining date (leave blank for today): </th>
+					<td colspan="4"><input type="text" name="joining" size="12" maxlength="10" value="<!-- TMPL_VAR name="joining" -->" /></td>
+				<!-- TMPL_ELSE -->
+					<th>Joining date: </th>
+					<td colspan="4"><!-- TMPL_VAR name="joining" --></td>
+				<!-- /TMPL_IF -->
+			</tr>
+			<tr>
+				<th>Expiry date (leave blank for auto calc): </th>
+				<td><input type="text" name="expiry" size="12" maxlength="10" value="<!-- TMPL_VAR name="expiry" -->" /></td>
+			</tr>
+
 			</table></div>
 
 
