Synching with rel_2_2.

--- a/koha-tmpl/intranet-tmpl/npl/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/circ/circulation.tmpl
@@ -46,6 +46,9 @@
 			<!-- TMPL_IF NAME="NO_MORE_RENEWALS" -->
 				<li>No more renewals possible</li>
 			<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="EXPIRED" -->
+				<li>Patron's card is expired</li>
+			<!-- /TMPL_IF -->
 			</ul>
 		</div>
 		<!-- TMPL_ELSE -->
