--- a/koha-tmpl/intranet-tmpl/npl/en/reports/borrowers_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/reports/borrowers_out.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Reports<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Reports<!-- TMPL_INCLUDE NAME="doc-head-close-calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="masthead.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-nav.inc" -->
 
@@ -75,6 +75,22 @@
 				<td>&nbsp;</td>
 				<td><label for="borrowercategory">Borrower Category</label></td>
 				<td><input type="text" name="Filter" id="borrowercategory" value="" /></td>
+			</tr>
+						<tr class="hilighted">
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td><label for="issuessince">Without issues since:</label> </td>
+				<td><input size="10" id="to" id="issuessince" name="Filter" value="" type="text" />
+						<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" />
+							<script type="text/javascript">
+								Calendar.setup(
+									{
+										inputField : "to",
+										ifFormat : "%Y-%m-%d",
+										button : "openCalendarTo",
+									}
+								);
+							</script></td>
 			</tr>
 		</tbody>
 	</table>
