--- a/koha-tmpl/intranet-tmpl/npl/en/parameters/checkmarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/parameters/checkmarc.tmpl
@@ -40,6 +40,18 @@
 	</tr>
 <!-- /TMPL_IF -->
 <!-- -->
+	<!-- TMPL_IF NAME="itemtags" -->
+		<tr>
+			<td><b>Item tag</b></td>
+			<td>There is more than 1 MARC tag related to items tab (10) : <!-- TMPL_VAR name="itemtags" --></td>
+		</tr>
+	<!-- TMPL_ELSE -->
+		<tr>
+			<td>OK</td>
+			<td><i>Only 1 MARC tag mapped to items</i></td>
+		</tr>
+	<!-- /TMPL_IF -->
+	<!--  -->
 <!-- TMPL_IF name="itemtype" -->
 	<tr>
 		<td>itemtype NOT mapped</td>
@@ -96,6 +108,22 @@
 		<td>biblionumber and biblioitemnumber mapped correctly</td>
 	</tr>
 <!-- /TMPL_IF -->
+
+	<!-- TMPL_IF NAME="frameworknull" -->
+		<tr>
+			<td><b>framework values</b></td>
+			<td>there is a null value in a frameworkcode. Check the following tables<br/>
+				<li>select * from marc_subfield_structure where frameworkcode is NULL</li>
+				<li>select * from marc_tag_structure where frameworkcode is NULL</li>
+				<li>select * from marc_biblio where frameworkcode is NULL</li></td>
+		</tr>
+	<!-- TMPL_ELSE -->
+		<tr>
+			<td>OK</td>
+			<td><i>no NULL value in frameworkcode</i></td>
+		</tr>
+	<!-- /TMPL_IF -->
+
 <!-- -->
 <!-- TMPL_IF name="total" -->
 	<tr>
