--- a/koha-tmpl/intranet-tmpl/default/de/bookshelves/shelves.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bookshelves/shelves.tmpl
@@ -35,7 +35,7 @@
 	<!-- TMPL_IF name="manageshelf" -->
 	<div id="bloc25">
 		<form>
-		<h2 class="catalogue">Buch mittels Strichcode hinzuf&uuml;gen</h2>
+		<h2 class="catalogue">Buch mittels Barcode hinzuf&uuml;gen</h2>
 			<input type="hidden" name="shelfnumber" value="<!-- TMPL_VAR NAME="shelfnumber" -->">
 			<input type="hidden" name="modifyshelfcontents" value="1">
 			<input type="hidden" name="viewshelf" value="<!-- TMPL_VAR NAME="shelfnumber" -->">
@@ -47,7 +47,7 @@
 	</div>
 	<!-- /TMPL_IF -->
 	<div id="bloc25">
-		<a href="shelves.pl" class="button catalogue">Shelf-Liste</a>
+		<a href="shelves.pl" class="button catalogue">Regalliste</a>
 	</div>
 <!-- TMPL_ELSE -->
 	<!-- TMPL_IF Name="shelves" -->
@@ -92,7 +92,7 @@
 						<option value="3">Frei</option>
 					</select>
 				</p>
-				<p> <li>ein privates Regal wird durch Sie verwaltet und kann nur von Ihnen eingesehen werden</li>
+				<p> <li>Ein privates Regal wird durch Sie verwaltet und kann nur von Ihnen eingesehen werden</li>
 					<li> Ein &ouml;ffentliches Regal wird durch Sie verwaltet, kann aber von jedermann eingesehen werden.</li>
 					<li> Ein freies Regal kann von jedem Benutzer bearbeitet und betrachtet werden.</li>
 				</p>
@@ -164,7 +164,7 @@
 					<option value="3" <!-- TMPL_IF name="category3" -->selected<!-- /TMPL_IF -->>Frei</option>
 				</select>
 			</p>
-				<p> <li>ein privates Regal wird durch Sie verwaltet und kann nur von Ihnen eingesehen werden</li>
+				<p> <li>Ein privates Regal wird durch Sie verwaltet und kann nur von Ihnen eingesehen werden</li>
 					<li> Ein &ouml;ffentliches Regal wird durch Sie verwaltet, kann aber von jedermann eingesehen werden.</li>
 					<li> Ein freies Regal kann von jedem Benutzer bearbeitet und betrachtet werden.</li>
 			</p>
