--- a/koha-tmpl/intranet-tmpl/default/de/help/admin/biblio_framework.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/help/admin/biblio_framework.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="help-top.inc" -->
 	<h1>Biblio Framework</h1>
-	<p>biblio frameworks are used to catalogue your biblios.</p>
-	<p>Unlike Koha 2.0, in this version you can have more than 1 framework to catalogate differently various materials. You can, for example, define 1 framework for monographies, 1 framework for serials, 1 framework for URL...</p>
-	<p>Once a framework type is created, you can clic on "MARC structure" to define the exact MARC structure. The first time, Koha will ask you to select an existing framework to copy into the new one. Thus, you don't have to define all the MARC structure</p>
+	<p>Biblio Frameworks werden zur Katalogisierung ihrer Biblios ben&ouml;tigt.</p>
+	<p>Im Gegensatz zu Koha 2.0 kann man mehr als ein Framework f&uuml;r die Katalogisierung unterschiedlicher Materialien definieren. Sie k&ouml;nnen z.B. 1 Framework f&uuml;r Monographien, 1 Framework f&uuml;r Serien, 1 Framework f&uuml;r URL's usw. einrichten.</p>
+	<p>Ist ein Framework angelegt, klicken sie auf "MARC structure" zur Definition der speziellen MARC-Struktur. Zuerst fragt Koha sie, ob ein bereits existierendes in das neue Framework kopiert werden soll. Dies ist sinnvoll, damit nicht die komplette MARC-Struktur neu angelegt werden mu&szlig;.</p>
 <!-- TMPL_INCLUDE name="help-bottom.inc" -->
