--- a/koha-tmpl/intranet-tmpl/default/de/z3950/searchresult.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/z3950/searchresult.tmpl
@@ -46,7 +46,7 @@
 	<!-- TMPL_ELSE -->
 				<p>Nichts gefunden</p>
 	<!-- /TMPL_IF -->
-	<!-- TMPL_IF NAME="numberpending" --><h1 class="catalogue">Still <!-- TMPL_VAR NAME="numberpending" --> requests to go</h1><!-- /TMPL_IF -->
+	<!-- TMPL_IF NAME="numberpending" --><h1 class="catalogue">Noch <!-- TMPL_VAR NAME="numberpending" --> Anfrage(n) zu erledigen</h1><!-- /TMPL_IF -->
 	<script language="javascript" type="text/javascript">
 		function Import(GetThisOne) {
 			opener.document.location= "../acqui.simple/addbiblio.pl?z3950=1&oldbiblionumber=<!-- TMPL_VAR NAME="oldbiblionumber" -->&breedingid="+GetThisOne;
