--- a/koha-tmpl/intranet-tmpl/default/de/bookshelves/addbookbybiblionumber.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bookshelves/addbookbybiblionumber.tmpl
@@ -6,7 +6,7 @@
 	<p><label>Titel</label><!-- TMPL_VAR NAME="title" --></p>
 	<p><label>Verfasser</label><!-- TMPL_VAR NAME="author" --></p>
 	<p><label>Zum virtuellen Regal <!-- TMPL_VAR NAME="CGIbookshelves" --> hinzuf&uuml;gen</label></p>
-	<p>oder zu einem neuen virtuellem Regal hinzuf&uuml;gen </p>
+	<p>oder zu einem neuen virtuellen Regal hinzuf&uuml;gen </p>
 	<p><input type="text" name="newbookshelf" maxlength=40 size=40>
 		<select name="category">
 			<option value="1">Privat</option>
