--- a/koha-tmpl/intranet-tmpl/default/de/help/nohelp.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/help/nohelp.tmpl
@@ -1,4 +1,4 @@
 <!-- TMPL_INCLUDE NAME="help-top.inc" -->
 	<h1>Online Hilfe</h1>
-	<p>Sorry, keine Hilfe f&uuml;r diesen Punkt</p>
+	<p>Sorry, keine Hilfe f&uuml;r diesen Punkt verf&uuml;gbar</p>
 <!-- TMPL_INCLUDE NAME="help-bottom.inc" -->
