translated by hellen

--- a/koha-tmpl/intranet-tmpl/default/de/errors/404.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/errors/404.tmpl
@@ -4,9 +4,9 @@
 <h1>An Error has Occurred!</h1>
 <h2>Fehler 404</h2>
 <ul>
-<li>This error means that the link was broken and that the page doesn't exist</li>	
-<li>To report this error, you can <a href="mailto:<!-- TMPL_VAR NAME="admin" -->">email the Koha Administrator</a>.</li>
-<li>Use top menu bar to navigate to another part of Koha.</li>
+<li>Dieser Fehler besagt, dass die aufgerufene Seite nicht existiert.</li>	
+<li>Um diesen Fehler zu melden, k&ouml;nnen Sie eine Mail <a href="mailto:<!-- TMPL_VAR NAME="admin" -->">an den Koha Administrator schicken</a>.</li>
+<li>&Uuml;ber das Men&uuml; k&ouml;nnen Sie andere Bereiche von Koha ausw&auml;hlen.</li>
 </ul>
 </div>
 <!-- TMPL_INCLUDE NAME="error-bottom.inc" -->
