--- a/koha-tmpl/intranet-tmpl/default/de/parameters/categorie.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/categorie.tmpl
@@ -96,7 +96,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td>G&uuml;ltigkeitsdauer</td>
+				<td>G&uuml;ltigkeit</td>
 				<td>
 					<input type="text" name="enrolmentperiod" size="3" maxlength="2" value="<!-- TMPL_VAR NAME="enrolmentperiod" -->"> Jahr(e)
 				</td>
@@ -172,8 +172,8 @@
 				<td><!-- TMPL_VAR NAME="description" --></td>
 			</tr>
 			<tr>
-				<td>G&uuml;ltigkeitsdauer</td>
-				<td><!-- TMPL_VAR NAME="enrolmentperiod" --> Jashr(e)</td>
+				<td>G&uuml;ltigkeit</td>
+				<td><!-- TMPL_VAR NAME="enrolmentperiod" --> Jahr(e)</td>
 			</tr>
 			<tr>
 				<td>H&ouml;chstalter</td>
@@ -181,7 +181,7 @@
 			</tr>
 			<tr>
 				<td>Mindestalter</td>
-				<td><!-- TMPL_VAR NAME="dateofbirthrequired" --> Jashr(e)</td>
+				<td><!-- TMPL_VAR NAME="dateofbirthrequired" --> Jahr(e)</td>
 			</tr>
 			<tr>
 				<td>Geb&uuml;hr</td>
@@ -250,10 +250,10 @@
 			<tr bgcolor="#99cc33">
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Kategorie</b></td>
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Beschreibung</b></td>
-				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>G&uuml;ltigkeitsdauer</b></td>
+				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>G&uuml;ltigkeit</b></td>
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Geb&uuml;hr</b></td>
-				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Obere Altersgrenze</b></td>
-				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Mindestalter</b></td>
+				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Max. Alter</b></td>
+				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Min. Alter</b></td>
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>&Uuml;berf&auml;llig</b></td>
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Vormerkung</b></td>
 				<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"> </td>
