--- a/koha-tmpl/intranet-tmpl/default/de/acqui.simple/additem.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/acqui.simple/additem.tmpl
@@ -5,7 +5,7 @@
 	<input type="hidden" name="bibid" value="<!-- TMPL_VAR NAME="bibid" -->">
 	<div class="tabbed">
 		<h1 class="catalogue">Biblionummer: <!-- TMPL_VAR NAME="biblionumber" --></h1>
-		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Bibliografische daten bearbeiten  </a>
+		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Bibliografische Daten bearbeiten  </a>
 		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&op=duplicate" class="button catalogue">  Duplizieren  </a>
 		<a href="../MARCdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  MARC  </a>
 		<a href="../detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Normal  </a>
