--- a/koha-tmpl/intranet-tmpl/default/de/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/catalogue/MARCdetail.tmpl
@@ -362,7 +362,7 @@ function active(numlayer)
 }
 
 function confirm_deletion() {
-	var is_confirmed = confirm('Are you sure you want to delete this biblio?');
+	var is_confirmed = confirm('Wollen Sie diesen Biblio wirklich l&ouml;schen?');
 	if (is_confirmed) {
 		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
 	}
