--- a/koha-tmpl/intranet-tmpl/default/de/parameters/issuingrules.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/issuingrules.tmpl
@@ -1,9 +1,9 @@
 <!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
 <div id="mainbloc">
-	<h1 class="parameters">Definition der Ausleihkonditionen f&uuml;r <!-- TMPL_VAR NAME="branch" --></h1>
+	<h1 class="parameters">Definition der Ausleihkonditionen <!-- TMPL_VAR NAME="branch" --></h1>
 	<div id="bloc25">
 		<h2 class="parameters">TIPP f&uuml;r Ausleihen</h2>
-		<p>Each box needs to be filled with issuelength, maxissues</p>
+		<p>Jedes Feld mu&szlig; mit Leihfrist und Anzahl der Ausleihen gef&uuml;llt werden</p>
 		<p> - z.B.: 21,5 = 21 Tage Leihfrist und max. 5 Ausleihen</p>
 		<h2 class="parameters">TIPP f&uuml;r Mahngeb&uuml;hren</h2>
 		<p>Bei jedem Feld m&uuml;ssen Geb&uuml;hr, Beginn der Geb&uuml;hrenerhebung und Erhebungsturnus eingetragen werden.</p>
@@ -16,7 +16,7 @@
 		<p> Ist eine Zelle nicht ausgef&uuml;llt, wird nach dem ersten der folgenden Werte gesucht :</p>
 		<ul>
 			<li>selbe Zweigstelle und selbe Benutzerkategorie, Medientyp *</li>
-			<li> selbe Zweigstelle und selber Medientyp, Benutzerkategorie *</li>
+			<li>selbe Zweigstelle und selber Medientyp, Benutzerkategorie *</li>
 			<li>selber Medientyp und Benutzerkategorie, Zweigstelle *</li>
 			<li>&uuml;berall</li>
 			<li>Wird nichts gefunden, wird der Defaultwert 21,5 (fest programmiert) genommen</li>
